H2 content and footer

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <a class="downloadLink"></a>Download Excursion (Coming soon!)</a>
   </header>
   <h2>Your personal travel guide</h2>
-
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <h2>Coming Soon for iPhone and Android</h2>
 
 </body>
 <footer>
   <a class="downloadLink">Download Excursion (Coming soon!)</a>
-  <p class="companyName">&#169; Excursion</p>
+  <p class="copyright">&#169; Excursion</p>
 </footer>
 </html>
