--- a/index.html
+++ b/index.html
@@ -4,20 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Excursion</title>
-  <link href="styles.css" type="text/css" rel="stylesheet" />
+  <link href="resources/css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
   <header>
     <h1>Discover hidden places in the world around you</h1>
-    <a class="downloadLink"></a>Download Excursion (Coming soon!)</a>
+    <a class="downloadLink" href="">Download Excursion (Coming soon!)</a>
   </header>
+    <a class="video" href="resources/css/videos/excursion.mp4" alt="Outdoor montage"></a>
   <h2>Your personal travel guide</h2>
-  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <p class="slogan">Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <p>
+    <img src="resources/images/camp.webp" alt="A desert camp site" title="Desert Camp Site" />
+  </p>
+  <p>
+    <img src="resources/images/phone.webp" alt="Simple phone image" title="Simple White Phone" />
+  </p>
   <h2>Coming Soon for iPhone and Android</h2>
-
 </body>
 <footer>
-  <a class="downloadLink">Download Excursion (Coming soon!)</a>
+  <a class="downloadLink" href="">Download Excursion (Coming soon!)</a>
   <p class="copyright">&#169; Excursion</p>
 </footer>
 </html>
