--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1>Discover hidden places in the world around you</h1>
     <a class="downloadLink" href="">Download Excursion (Coming soon!)</a>
   </header>
-    <a class="video" href="resources/css/videos/excursion.mp4" alt="Outdoor montage"></a>
+    <video autoplay muted loop> 
+     <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
   <h2>Your personal travel guide</h2>
   <p class="slogan">Excursion remembers places you like, and recommends new points of interest around you.</p>
   <p>
